# universal-package-inspector

./: CMakeLists.txt  README.md
include/: cli.hpp  conflict_analyzer.hpp  filesystem_scanner.hpp  report_generator.hpp
include/package_manager/: apt_adapter.hpp  dnf_adapter.hpp  dpkg_adapter.hpp  flatpak_adapter.hpp  package_manager_base.hpp  pip_adapter.hpp  rpm_adapter.hpp  snap_adapter.hpp
src/: cli.cpp  conflict_analyzer.cpp  filesystem_scanner.cpp  main.cpp  report_generator.cpp
src/package_manager/: apt_adapter.cpp  dnf_adapter.cpp  dpkg_adapter.cpp  flatpak_adapter.cpp  package_manager_base.cpp  pip_adapter.cpp  rpm_adapter.cpp  snap_adapter.cpp
tests/: test_package_manager.cpp
